--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <form id="login-form">
                 <div class="user-box">
                     <input type="text" id="username" required> <!-- تغيير من email إلى username -->
-                    <label>اسم المستخدم</label> <!-- تغيير النص هنا -->
+                    <label>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه </label> <!-- تغيير النص هنا -->
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
