--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Login</h2>
             <form id="login-form">
                 <div class="user-box">
-                    <input type="email" id="username" required>
+                    <input type="username" id="username" required>
                     <label>Email</label>
                 </div>
                 <div class="user-box">
