--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <form id="login-form">
                 <div class="user-box">
                     <input type="email" id="email" required>
-                    <label>Email</label>
+                    <label>username</label>
                 </div>
                 <div class="user-box">
                     <input type="password" id="password" required>
